# uuv_simulator

./: .travis.yml  structure.txt
uuv_assistants/: package.xml
uuv_control/: structure.txt
uuv_control/uuv_control_cascaded_pids/: package.xml
uuv_control/uuv_control_cascaded_pids/launch/: pso_velocity.launch
uuv_control/uuv_control_utils/: package.xml
uuv_control/uuv_thruster_manager/: package.xml
uuv_control/uuv_trajectory_control/: package.xml
uuv_descriptions/: structure.txt
uuv_descriptions/launch/: upload_rexrov1_default.launch  upload_rexrov2_default.launch  upload_rexrov3_default.launch  upload_rexrov_swarm.launch  upload_rexrov_teleop.launch
uuv_descriptions/urdf/: rexrov_sensors.xacro
uuv_gazebo/launch/controller_demos/: start_pid_demo_with_teleop.launch
uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: package.xml
uuv_pso/: CMakeLists.txt  package.xml  setup.py
uuv_pso/launch/: pso.launch  start_plume_swarm.launch  start_turbulent_plume.launch  upload_rexrov_pso.launch  upload_rexrov_swarm.launch
uuv_pso/rviz/: plume_swarm.rviz
uuv_pso/scripts/: pso.py
uuv_pso/src/PSO/: ParticleSwarm.py  ParticleSwarmUtility.py  __init__.py
uuv_sensor_plugins/uuv_sensor_ros_plugins/src/: gazebo_ros_image_sonar.cpp
uuv_sensor_plugins/uuv_sensor_ros_plugins/test/: test_urdf_files.py
uuv_teleop/: package.xml
uuv_tutorials/uuv_tutorial_dp_controller/scripts/: tutorial_dp_controller.py
